--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -9,7 +9,16 @@
     gap: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    font-size: 13px;
   }
+/* @media screen and (min-width: 1280px) { .info {
+    font-size: 20px; 
+    }
+
+} */
+
+
+
   
   .info-item  {
     display: flex;
@@ -19,49 +28,83 @@
 
   .gallery {
     display: grid;
-    max-width: 1140px;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-auto-rows: 240px;
-    row-gap: 60px;
-    column-gap: 12px;
+    grid-gap: 12px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
     list-style: none;
   }
+  @media screen and (min-width: 768px) { 
+    .gallery {
+        grid-template-columns: repeat(auto-fit, minmax(270px, 320px));    
+    }
+}
   .photo-card {
     position: relative;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-      0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+    padding: 10px;
+    margin: 10px;
+    padding-bottom: 50px;
+    border: 1px solid black;
+    border-radius: 3px;
+    max-width: 320px;
+    transition: transform var(--animation-duration) var(--timing-function);
   }
 
   .photo-card:hover {
     transform: scale(1.03);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
   } 
 
-  .photo-card {
-    transition: transform var(--animation-duration) var(--timing-function);
-  }
   
   .gallery-image {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
   }
+  
 
   .gallery-link {
     display: block;
     text-decoration: none;
     height: 100%;
+    color: black;
+    /* transition: cursor var(--animation-duration) var(--timing-function); */
   }
   
-  .gallery-link:hover {
-    cursor: zoom-in;
+  /* .gallery-link:hover { */
+    /* cursor: zoom-in; */
+  /* } */
+  .search-form {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    max-width: 320px;
+    padding: 10px;
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0 auto;
   }
-  
+  @media screen and (min-width: 768px) { 
+    .search-form {
+        max-width: 500px;
+    }
+}
+
+  .form-container {
+    background-color: darkcyan;
+    padding: 10px;
+  }
   .load-more {
     display: block;
     margin: 0 auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 15px;
+    min-width: 180px;
+    
   }
 
   .is-hidden {
