--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery-section">
-  <div class="container">
+    <div class="form-container">
     <form class="search-form" id="search-form">
       <input
           type="text"
@@ -9,6 +9,8 @@
       />
     <button type="submit">Search</button>
     </form>
+  </div>
+  <div class="container">
     <div class="gallery">
     <!-- Картки зображень -->
     </div>
