add fixed form + it's styles + плавний scroll на початок

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -96,6 +96,9 @@
   .form-container {
     background-color: darkcyan;
     padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
   }
   .load-more {
     display: block;
