--- a/src/css/common.css
+++ b/src/css/common.css
@@ -83,11 +83,16 @@ ol {
 
   input {
     font-size: 20px;
-    border: 1px solid rgba(14, 125, 125, 0.5);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(14, 125, 125, 0);
     border-radius: 20px;
+    box-shadow: 0 0 10px rgba(1, 1, 1, 0.3);
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
     width: 100%;
+  }
+  input:focus {
+    outline: none;
+    border: 1px solid #464646;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   }
